# cirrus-designate-sink-handler

./: .gitignore  .gitreview  README.md  cirrus.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
cirrus_designate_sink_handler/: cli.py  version.py
cirrus_designate_sink_handler/notification_handler/: cirrus_floating_ip_handler.py
designate_cirrus_handler/: cli.py  version.py
designate_cirrus_handler/notification_handler/: cirrus.py
events/: associate.json  disassociate.json  port-delete.json
