[metadata]
name = designate-cirrus-handler
summary = Time Warner Cable Designate Floating IP Handler

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = designate_cirrus_handler

[entry_points]
designate.notification_handler =
    cirrus_floatingip = designate_cirrus_handler.notification_handler.cirrus:CirrusFloatingHandler

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
