[metadata]
name = cirrus-designate-sink-handler
summary = Time Warner Cable Designate Sink Handler

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = cirrus_designate_sink_handler

[entry_points]
console_scripts =
    cirrus-designate-sink-cli = cirrus_designate_sink_handler.cli:main
designate.notification.handler =
    cirrus_floating_ip = cirrus_designate_sink_handler.notification_handler.cirrus_floating_ip_handler:CirrusFloatingIPHandler

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
